--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /* your code */
+#th1
+{
+	background-color:steelblue;
+}
+.lblue
+{
+	background-color: lightblue ;
+}
+table
+{
+	border-collapse: collapse;
+}
+td, th
+{
+	
+	padding: 0px 50px 0px 0px;
+
+}
